# DebugMod

./: .gitignore  CMakeLists.txt  CMakePresets.json  DebugMenu_english.txt  GenerateTranslationFiles.bat  LICENSE  README.md  acknowledgements.md  vcpkg.json
cmake/: Version.h.in  headerlist.cmake  sourcelist.cmake
papyrus/: DebugMenuMCM.psc
src/: DebugHandler.cpp  DebugHandler.cpp~RF13fc68c.TMP  DebugHandler.cpp~RF14c8686.TMP  DebugHandler.cpp~RF1563f0d.TMP  DebugHandler.cpp~RF15ccf88.TMP  DebugHandler.cpp~RF5782b5.TMP  DebugHandler.cpp~RFec4a0d.TMP  DebugHandler.h  DebugUIMenu.cpp  DebugUIMenu.h  DrawHandler.cpp  DrawHandler.h  DrawMenu.cpp  DrawMenu.h  EventSink.cpp  EventSink.h  FreeCamHandler.cpp  FreeCamHandler.h  HUDHandler.cpp  HUDHandler.h  Linalg.cpp  Linalg.h  MCM.cpp  MCM.h  PCH.h  RE.cpp  RE.h  UIHandler.cpp  UIHandler.h  Utils.cpp  Utils.h  hooks.h  logger.h  main.cpp
src/DebugMenu/: BoxHandler.cpp  BoxHandler.h  CellHandler.cpp  CellHandler.h  CollisionHandler.cpp  CollisionHandler.h  DebugItem.cpp  DebugItem.h  DebugMenu.cpp  DebugMenu.h  InfoHandler.cpp  InfoHandler.h  MarkerHandler.cpp  MarkerHandler.h  NavmeshHandler.cpp  NavmeshHandler.h  OcclusionHandler.cpp  OcclusionHandler.h  RefInspectorHandler.cpp  RefInspectorHandler.h
src/Interface/: AnimationHandler.cpp  AnimationHandler.h  BoundingBox.cpp  BoundingBox.h  Button.cpp  Button.h  Element.cpp  Element.h  GroupElement.cpp  GroupElement.h  IElement.cpp  IElement.h  InputHandler.cpp  InputHandler.h  Menu.cpp  Menu.h  Size.h  Textfield.cpp  Textfield.h  UIHandler.cpp  UIHandler.h  UIUtils.h
src/Renderer/: BasicDetour.h  CBuffer.cpp  CBuffer.h  D3DContext.cpp  D3DContext.h  Drawer.cpp  Drawer.h  MeshDrawer.cpp  MeshDrawer.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shaders.cpp  Shaders.h  VertexBuffer.cpp  VertexBuffer.h
swf/: aspect ratios.txt
swf/DebugMenu/: ClickButton.as  CyclicButton.as  DayNightButton.as  DebugMenu - 16_10.fla  DebugMenu - Ultrawide 21_9.fla  DebugMenu - Ultrawide 32_9.fla  DebugMenu - backup.fla  DebugMenu 16 10.fla  DebugMenu 16_10.fla  DebugMenu 21 9.fla  DebugMenu 21_9.fla  DebugMenu 32 9.fla  DebugMenu 32_9.fla  DebugMenu.fla  DebugMenu.html  DefaultMenuItem.as  InvisibleClickButton.as  MainContainer.as  MenuContainer.as  RangeText.as  TextBox.as  ToggleButton.as
swf/DrawMenu/: CoordinateTextField.as  CoordinatesBox.as  DrawMenu - Copy.fla  DrawMenu - deprecated.fla  (+7 more)
